--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-django-mailer (2011.3-d5-rcb2) natty; urgency=low
+
+  * Add rcb-component field in control in preparation for essex-e0 drop
+
+ -- RCB Builder <rcb-deploy@lists.rackspace.com>  Mon, 31 Oct 2011 12:49:48 -0500
+
 python-django-mailer (2011.3-d5-rcb1) natty; urgency=low
 
   * Updated upstream source from
