--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-django-mailer (2011.3-final-rcb1) natty; urgency=low
+
+  * import from github.com/cloudbuilders/django-mailer, revision
+    840d25bb9db9fbc801b9226607ddce49f4ac37c5
+
+ -- RCB Builder <rcb-deploy@lists.rackspace.com>  Tue, 01 Nov 2011 12:57:50 -0500
+
 python-django-mailer (2011.3-d5-rcb2) natty; urgency=low
 
   * Add rcb-component field in control in preparation for essex-e0 drop
@@ -12,11 +19,6 @@ python-django-mailer (2011.3-d5-rcb1) natty; urgency=low
     from https://github.com/rpedde/debians.git, revision
     f9718078e8a94baf9fd734848579a6a881165f62
 
- -- root <build@syn-n04.lab>  Tue, 13 Sep 2011 23:40:03 -0500
+ -- RCB Builder <rcb-deploy@lists.rackspace.com>  Tue, 13 Sep 2011 23:40:03 -0500
 
-python-django-mailer (000-000-0000) maverick; urgency=low
-
-  * Initial Commit
-
- -- root <root@packaging>  Tue, 19 Jul 2011 22:21:31 +0000
 
