--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-django-mailer (2012.0+e3-rcb1) natty; urgency=low
+
+  * bump to e3
+
+ -- RCB Builder <rcb-deploy@lists.rackspace.com>  Fri, 10 Feb 2012 08:44:30 -0600
+
 python-django-mailer (2011.3-final-rcb1) natty; urgency=low
 
   * import from github.com/cloudbuilders/django-mailer, revision
